ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo
  labels:
    app: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - demo.apps.icteam.be
      secretName: demo-tls
  rules:
    - host: demo.apps.icteam.be
      http:
        paths:
          - path: /
            backend:
              serviceName: demo
              servicePort: 80
